--- a/ZWGB.cbp
+++ b/ZWGB.cbp
@@ -12,8 +12,15 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-g" />
+					<Add directory="E:/Users/Jesse/Documents/Github/DMGe/include" />
+					<Add directory="E:/Users/Jesse/Documents/Github/LIBRARIES/boost_1_57_0" />
 				</Compiler>
+				<Linker>
+					<Add library="E:\Users\Jesse\Documents\Github\LIBRARIES\boost_1_57_0\stage\lib\libboost_system-mgw47-mt-d-1_57.a" />
+					<Add library="E:\Users\Jesse\Documents\Github\LIBRARIES\boost_1_57_0\stage\lib\libboost_thread-mgw47-mt-d-1_57.a" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/ZWGB" prefix_auto="1" extension_auto="1" />
@@ -22,16 +29,19 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="E:/Users/Jesse/Documents/Github/DMGe/include" />
+					<Add directory="E:/Users/Jesse/Documents/Github/LIBRARIES/boost_1_57_0/" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="E:\Users\Jesse\Documents\Github\LIBRARIES\boost_1_57_0\stage\lib\libboost_system-mgw47-mt-1_57.a" />
+					<Add library="E:\Users\Jesse\Documents\Github\LIBRARIES\boost_1_57_0\stage\lib\libboost_thread-mgw47-mt-1_57.a" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-Wall" />
 			<Add option="-std=c++11" />
-			<Add directory="./include" />
+			<Add option="-Wall" />
 		</Compiler>
 		<Linker>
 			<Add library="boost_thread" />
@@ -48,6 +58,7 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
